--- a/package.json
+++ b/package.json
@@ -3,17 +3,9 @@
   "version": "1.0.0",
   "description": "Website for tracking movie watchlists",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 500ms -q dist/index.js\"",
-    "lint": "gts lint",
-    "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
-    "posttest": "npm run lint"
+    "start": "node index.js",
+    "start-watch": "nodemon index.ts",
+    "dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -30,7 +22,10 @@
   "homepage": "https://github.com/nkeil/movies-site#readme",
   "dependencies": {
     "@prisma/client": "^4.7.1",
-    "express": "^4.18.2"
+    "axios": "^1.2.1",
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -40,10 +35,10 @@
     "concurrently": "^7.6.0",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
+    "gts": "^3.1.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "gts": "^3.1.1"
+    "typescript": "^4.9.4"
   }
 }
